GNOME Bugzilla – Bug 686642
udpsrc: trivial typo causes compilation error
Last modified: 2012-10-22 22:30:44 UTC
When I try to make gst-plugins-good using gcc 4.3.1 I see this: make[5]: Entering directory `gst-plugins-good/build/host/gst/udp' CC libgstudp_la-gstudpsrc.lo cc1: warnings being treated as errors gst-plugins-good/gst/udp/gstudpsrc.c: In function 'gst_udpsrc_create': gst-plugins-good/gst/udp/gstudpsrc.c:365: error: 'ret' may be used uninitialized in this function make[5]: *** [libgstudp_la-gstudpsrc.lo] Error 1 This is due to a trivial typo in gst_udpsrc_create() which I fix with the attached patch.
Created attachment 226997 [details] [review] Proposed patch for fixing compilation error.
Thanks! commit 9fc62a58e3a21ed3354225cc64cdeb6b865cd094 Author: Sebastian Rasmussen <sebrn@axis.com> Date: Mon Oct 22 15:54:17 2012 +0200 updsrc: fix typo causing compilation error gstudpsrc.c: In function 'gst_udpsrc_create': gstudpsrc.c:365: error: 'ret' may be used uninitialized in this function https://bugzilla.gnome.org/show_bug.cgi?id=686642